2014-05-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_linter): Make an error message somewhat clearer.
	* src/rcfile.c (parse_binding): Improve another error message.
	* doc/syntax/nanorc.nanorc: Show key names like M-6 and M-/ as valid.
	* src/global.c (thanks_for_all_the_fish): Upon exit also free the
	lists with functions and shortcuts.
	* src/*.c: Several random whitespace and comment tweaks.
	* src/global.c (replace_scs_for): Condense the function a bit.
	* src/help.c (help_init): No need to keep looping when two are found.
	* src/global.c: Improve compilation with --disable-browser.
	* src/nano.h, src/*.c: A few more comment tweaks.

2014-05-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_spell): Provide startup feedback, as for the linter.
	* doc/syntax/nanorc.nanorc: Show bright foreground colours as valid.
	* src/rcfile.c: Improve some comments, and remove some others that
	are mispasted or superfluous.
	* doc/texinfo/nano.texi: Add missing parenthesis, remove blank line.
	* src/rcfile.c (parse_magictype, parse_headers): Handle the libmagic
	and headerline regexes in the same manner, eliding a static variable
	while renaming some others.
	* src/*.h, src/rcfile.c (parse_magictype, parse_headers): Rename them
	to parse_magic_exp() and parse_header_exp() to be more fitting, further
	symmetrify them, and improve some comments.
	* src/nano.h, src/color.c, src/global.c, src/rcfile.c: Rename struct
	type 'exttype' to 'regexlisttype', to better match its functions, and
	upon exit also free the regexes for libmagic results and headerlines.
	* doc/syntax/python.nanorc: Improve the multiline regexes, make the
	one with single quotes work again, and add some comments.
	* doc/syntax/{man,python,fortran}.nanorc: Add regexes for comments,
	trailing whitespace and reminders, and trim some trailing spaces.
	* src/rcfile.c: Move parse_magic_exp() next to its sister.
	* src/color.c (color_update): Rename a variable, and elide another.
