@@ -1,3 +1,8 @@
+2014-05-14  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (edit_draw): Poke a non-breaking space into the last
+	column of every line, to startle the terminal into handling wide,
+	two-column characters properly.  This fixes Savannah bug #31743.
+
 2014-05-13  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_linter): Make an error message somewhat clearer.
 	* src/rcfile.c (parse_binding): Improve another error message.
